--- a/Revels'18/Base.lproj/Main.storyboard
+++ b/Revels'18/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                 <pageViewController storyboardIdentifier="LandingPageView" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Lic-B3-8Ca" customClass="LandingPageViewController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OKU-16-DOC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-538" y="-108"/>
+            <point key="canvasLocation" x="-2074" y="659"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="FKr-bo-9Y3">
@@ -85,7 +85,7 @@
             </objects>
             <point key="canvasLocation" x="149.59999999999999" y="658.92053973013503"/>
         </scene>
-        <!--Events Collection Collection View Controller-->
+        <!--Categories-->
         <scene sceneID="uEQ-Hb-2Xk">
             <objects>
                 <collectionViewController storyboardIdentifier="EventsView" id="JTw-T7-5FA" customClass="EventsCollectionCollectionViewController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
@@ -114,11 +114,11 @@
                             <outlet property="delegate" destination="JTw-T7-5FA" id="r6I-9s-rpZ"/>
                         </connections>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" systemItem="featured" id="6F5-gx-CAm"/>
+                    <tabBarItem key="tabBarItem" title="Categories" id="6F5-gx-CAm"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jcz-Hz-Y9A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1673" y="-1154"/>
+            <point key="canvasLocation" x="2014" y="-1364"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="GGv-lT-uT0">
@@ -132,12 +132,42 @@
                     </tabBar>
                     <connections>
                         <segue destination="JTw-T7-5FA" kind="relationship" relationship="viewControllers" id="maf-VP-sHI"/>
+                        <segue destination="R0x-Dn-mcu" kind="relationship" relationship="viewControllers" id="SrP-DK-eaO"/>
                         <segue destination="Fac-SW-eNk" kind="relationship" relationship="viewControllers" id="YnH-oI-cL3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="muX-7V-WtI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="913" y="-109"/>
+            <point key="canvasLocation" x="945" y="659"/>
+        </scene>
+        <!--Events-->
+        <scene sceneID="vLn-Nc-yRS">
+            <objects>
+                <tableViewController id="R0x-Dn-mcu" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="swR-fb-hCn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="PrL-fX-adq">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PrL-fX-adq" id="wDg-SG-D2X">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="R0x-Dn-mcu" id="2D4-Dp-YNe"/>
+                            <outlet property="delegate" destination="R0x-Dn-mcu" id="Ksd-iD-dYi"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Events" id="Te8-Iv-E2p"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gBx-qj-cel" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2014" y="-326"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="V8H-Uf-Srv">
@@ -147,8 +177,8 @@
                         <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBarItem>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="PBn-oT-xix">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="PBn-oT-xix">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -158,25 +188,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t9L-ke-IZ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1673" y="1084"/>
+            <point key="canvasLocation" x="945" y="1481"/>
         </scene>
         <!--About-->
         <scene sceneID="mlq-ic-HLb">
             <objects>
                 <viewController id="ocg-Fe-Cvr" customClass="AboutViewController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uPR-2u-vMJ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GIZ-5c-jtd">
-                                <rect key="frame" x="0.0" y="160" width="375" height="394"/>
+                                <rect key="frame" x="0.0" y="160" width="375" height="342"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AboutCell" id="PA4-2a-wpd" customClass="AboutViewCell" customModule="Revels_18" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AboutCell" id="PA4-2a-wpd" customClass="AboutViewCell" customModule="Revels_18" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PA4-2a-wpd" id="4VT-Y0-jBo">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ITo-X6-bqm">
@@ -185,19 +215,10 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nZk-Ps-u2f">
-                                                    <rect key="frame" x="348" y="0.0" width="12" height="43.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="nZk-Ps-u2f" secondAttribute="trailing" constant="15" id="8Ug-WS-CmQ"/>
                                                 <constraint firstItem="ITo-X6-bqm" firstAttribute="leading" secondItem="4VT-Y0-jBo" secondAttribute="leadingMargin" id="UcA-U4-IPh"/>
                                                 <constraint firstItem="ITo-X6-bqm" firstAttribute="top" secondItem="4VT-Y0-jBo" secondAttribute="topMargin" id="VCt-s6-GLL"/>
-                                                <constraint firstItem="nZk-Ps-u2f" firstAttribute="top" secondItem="4VT-Y0-jBo" secondAttribute="top" id="c9s-a3-scY"/>
-                                                <constraint firstAttribute="bottom" secondItem="nZk-Ps-u2f" secondAttribute="bottom" id="ehh-el-UoC"/>
                                                 <constraint firstItem="ITo-X6-bqm" firstAttribute="bottom" secondItem="4VT-Y0-jBo" secondAttribute="bottomMargin" id="v3p-w7-Hje"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -232,14 +253,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uS2-nF-uBg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2607.1999999999998" y="1082.608695652174"/>
+            <point key="canvasLocation" x="1910" y="1480"/>
         </scene>
         <!--Revels Home Page Controller-->
         <scene sceneID="Fk3-Q2-5hw">
             <objects>
                 <viewController id="Lb4-JY-MYy" customClass="RevelsHomePageController" customModule="Revels_18" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="f8M-z5-yl0">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="awe-he-Vq9"/>
@@ -247,7 +268,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qyY-9o-3nd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3543" y="738"/>
+            <point key="canvasLocation" x="3806" y="1480"/>
         </scene>
     </scenes>
     <resources>
