--- a/Revels'18/NIB Files/EmptyView.xib
+++ b/Revels'18/NIB Files/EmptyView.xib
@@ -16,37 +16,35 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels18_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="rVO-ZP-Qrj">
-                    <rect key="frame" x="0.0" y="195" width="375" height="200"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="200" id="0cN-lX-Uph"/>
-                        <constraint firstAttribute="width" constant="375" id="mho-Q9-NIB"/>
-                    </constraints>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cannot Connect To The Network..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okw-qz-fhq">
-                    <rect key="frame" x="0.0" y="405" width="375" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                    <color key="textColor" red="0.69357281920000002" green="0.26721471549999998" blue="0.19994783399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pull To Refresh To Try Again" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hBE-mn-KwA">
-                    <rect key="frame" x="0.0" y="435.5" width="375" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="l2J-eu-Bhv">
+                    <rect key="frame" x="0.0" y="209.5" width="0.0" height="248.5"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels18_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="rVO-ZP-Qrj">
+                            <rect key="frame" x="87.5" y="0.0" width="200" height="200"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="200" id="VGk-0Y-Aos"/>
+                                <constraint firstAttribute="width" constant="200" id="iTy-s7-9sc"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cannot Connect To The Network..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okw-qz-fhq">
+                            <rect key="frame" x="0.0" y="205" width="0.0" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                            <color key="textColor" red="0.69357281920000002" green="0.26721471549999998" blue="0.19994783399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pull To Refresh To Try Again" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hBE-mn-KwA">
+                            <rect key="frame" x="0.0" y="230.5" width="0.0" height="18"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="okw-qz-fhq" secondAttribute="trailing" id="2r0-aN-Lbc"/>
-                <constraint firstItem="okw-qz-fhq" firstAttribute="top" secondItem="rVO-ZP-Qrj" secondAttribute="bottom" constant="10" id="5O4-Kl-H6K"/>
-                <constraint firstItem="hBE-mn-KwA" firstAttribute="top" secondItem="okw-qz-fhq" secondAttribute="bottom" constant="10" id="6fS-v8-QPc"/>
-                <constraint firstItem="rVO-ZP-Qrj" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="175" id="JZU-9X-P73"/>
-                <constraint firstItem="okw-qz-fhq" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="PaY-g5-ITT"/>
-                <constraint firstItem="hBE-mn-KwA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SrH-Rn-nOo"/>
-                <constraint firstItem="rVO-ZP-Qrj" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Xyf-Ww-O45"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rVO-ZP-Qrj" secondAttribute="trailing" id="iPK-74-H6d"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hBE-mn-KwA" secondAttribute="trailing" id="wnv-OO-x2I"/>
+                <constraint firstItem="l2J-eu-Bhv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Q6B-Ps-tJd"/>
+                <constraint firstItem="l2J-eu-Bhv" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="eL8-ca-vk1"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="33.5" y="54.5"/>
